--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
       "matches": ["<all_urls>"],
       "all_frames": true,
       "run_at": "document_end",
-      "js": ["jquery.js", "main.js"],
+      "js": ["main.js"],
       "css": ["style.css"]
     }
   ]
