--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Event Spy",
-  "version": "0.4.8",
+  "version": "0.4.10",
   "manifest_version": 2,
-  "description": "Spy on the events listened for on a page",
+  "description": "Spy on all events, the application code listens for, on a page.",
   "icons": { 
     "16": "icon16.png",
     "48": "icon48.png",
