--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Event Spy",
-  "version": "0.5.2",
+  "version": "0.6.0",
   "manifest_version": 2,
-  "description": "Spy on all events, the application code listens for, on a page.",
+  "description": "Spy on all events the application code listens for on a page as they fire.",
   "icons": { 
     "16": "icon16.png",
     "48": "icon48.png",
@@ -23,5 +23,9 @@
       "js": ["main.js"],
       "css": ["style.css"]
     }
-  ]
+  ],
+  "browser_action": {
+    "default_title": "EventSpy",
+    "default_popup": "browser_action.html"
+  }
 }
