--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Event Spy",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "manifest_version": 2,
   "description": "Spy on all events the application code listens for on a page as they fire.",
   "icons": { 
@@ -19,7 +19,7 @@
     {
       "matches": ["<all_urls>"],
       "all_frames": true,
-      "run_at": "document_end",
+      "run_at": "document_start",
       "js": ["main.js"],
       "css": ["style.css"]
     }
